# teensy_ducker

./: .gitignore  Arduino.h  AudioConvert_F32.h  AudioEffectCompressor2_F32.h  AudioEffectCompressor_F32.h  AudioEffectGain_F32.h  Makefile  README.md  effect_compressor.cpp  effect_compressor.h  notes.txt  output_i2s_f32.cpp  output_i2s_f32.h  volumegate.ino
PCB/: PCB.kicad_pro
src/: CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  demo-b12d07c_include.cmake  volumegate-b12d07c_include.cmake
src/examples/: demo.cpp  demo.h
src/spec/: demo.spec.cpp  specs.cpp
src/tests/: utils.test.cpp
src/volumegate/: effect_compressor.cpp  effect_compressor.h  utils.cpp  utils.h
